testsuite/tests/ghci/scripts/T12146.stderr

T12146.hs:1:21:
    Parse error: module header, import declaration
    or top-level declaration expected.
