testsuite/tests/ghci/scripts/T12146.script
System.IO.writeFile "T12146.hs" "module Main where { ipmort Data.Char; }"
:load T12146